[ Product Partnerships & Shop our Product Partners ] fixed some minor spacing issue between sections (#226)

--- a/src/theme/css/frontend/_card-post.scss
+++ b/src/theme/css/frontend/_card-post.scss
@@ -3,13 +3,13 @@
   @apply overflow-hidden;
   @apply shadow-light rounded-px10;
   @apply text-teal-dark;
-  @apply h-px503; 
+  @apply h-px503;
   @apply max-w-full;
   @apply mx-auto;
 
   // Thumbnail
   .post-thumbnail-wrap {
-	@aaply h-px240; 
+	@apply h-px240;
 	@apply overflow-hidden;
 	@apply flex-shrink-0;
 	@apply rounded-t-px10;
