--- a/src/theme/css/frontend/_product-partnerships.scss
+++ b/src/theme/css/frontend/_product-partnerships.scss
@@ -1,9 +1,84 @@
 .product-partnerships {
+	.hero {
+		@apply items-start text-center lg:items-center xl:items-start;
 
+		@screen md {
+			height: rem-calc(446px);
+		}
+
+		@screen xl {
+			height: rem-calc(546px);
+		}
+
+		&--inner {
+			margin-top: rem-calc(50px);
+
+			h1 {
+				@apply mb-px18;
+			}
+
+			.hero__description {
+				@apply font-normal;
+			}
+
+			@screen md {
+				margin-top: rem-calc(63px);
+
+				p {
+					letter-spacing: rem-calc(0.5px);
+				}
+
+				:is(h1, p) {
+					@apply max-w-px500;
+				}
+
+				.hero__btn-1 {
+					@apply px-6;
+				}
+			}
+
+			@screen lg {
+				@apply mt-0;
+
+				h1 {
+					max-width: unset;
+				}
+
+				p {
+					@apply max-w-2xl;
+				}
+			}
+
+			@screen xl {
+				@apply mt-px70;
+
+				p:first-child {
+					@apply mb-px20 text-px16 leading-px22;
+					letter-spacing: rem-calc(1px);
+				}
+
+				h1 {
+					@apply mb-px12;
+				}
+
+				.hero__description {
+					@apply text-px22 leading-px32;
+					max-width: rem-calc(606px);
+					letter-spacing: rem-calc(0.5px);
+					margin-bottom: rem-calc(52px);
+				}
+
+				.hero__btn-1 {
+					@apply text-px20 leading-px26 px-px40;
+					letter-spacing: rem-calc(0.5px);
+				}
+			}
+		}
+	}
   .featured-stories {
 	background-color: theme('colors.gray.light');
 
-	@apply pt-px60 pb-px100;
+	@apply pt-px70 pb-px100;
 
 	@screen md {
 	  @apply py-px80;
@@ -17,12 +92,25 @@
 	  @apply py-0;
 	}
 
+	.tile-grid-header {
+		@apply mb-px40;
+
+		@screen md {
+			margin-bottom: rem-calc(52px);
+		}
+	}
+
 	.tile-grid-title {
-	  @apply mb-px50;
+	  @apply mb-0 font-bold;
 
 	  @screen lg {
 		@apply mb-px86;
 	  }
+
+		@screen xl {
+			@apply text-px40 leading-px48;
+			letter-spacing: rem-calc(-0.5px);
+		}
 	}
   }
 
@@ -65,6 +153,10 @@
 			grid-template-columns: repeat(3, minmax(0, rem-calc(355px)));
 			@apply justify-center;
 		}
+
+		@screen xl {
+			grid-template-columns: repeat(3, minmax(0, rem-calc(395px)));
+		}
 	}
 
 	.tile {
@@ -73,6 +165,11 @@
 
 		@screen lg {
 			width: theme('postCard.width.lg');
+		}
+
+		@screen xl {
+			width: rem-calc(395px);
+			max-width: none;
 		}
 
 		&-inner {
@@ -94,17 +191,17 @@
   }
 
   .current-partners {
-		@apply pt-px88 pb-px100 md:py-px100 lg:pt-px168 lg:pb-px140;
+		@apply mt-px88 mb-px150 md:mt-px100 md:mb-px127 xl:mt-px168 xl:mb-px140;
 
 		&__title {
-			@apply text-px32 leading-px40 md:leading-px42 text-px40 leading-px48 text-center font-bold mb-px90 md:mb-px90 lg:mb-px60 xl:mb-0;
+			@apply text-px32 leading-px40 md:leading-px42 xl:text-px40 xl:leading-px48 text-center font-bold mb-px90 md:mb-px90 lg:mb-px60 xl:mb-px40;
 			color: theme('colors.teal.dark');
 		}
   }
 
 
   .banner {
-		@apply max-w-px319 mx-auto py-px100 text-white text-center;
+		@apply max-w-px319 mx-auto mb-px100 xl:mb-px140 text-white text-center;
 
 		@screen md {
 			@apply max-w-px550;
@@ -119,7 +216,8 @@
 			background-color: theme('colors.blue_green.DEFAULT');
 
 			@screen md {
-			@apply px-px117 pt-32 pb-px117;
+			@apply px-px117 pb-px117;
+			padding-top: rem-calc(133px);
 			}
 
 			@screen lg {
@@ -132,15 +230,26 @@
 
 			@screen md {
 			@apply text-px32 leading-px42;
+			letter-spacing: rem-calc(0.5px);
 			}
 
 			@screen lg {
 			@apply text-px46 leading-px56;
 			}
+
+			@screen xl{
+				@apply mx-auto;
+				max-width: rem-calc(442px);
+			}
 		}
 
 		&__description {
 			@apply font-normal text-px18 leading-px22 mt-5;
+
+			@screen md {
+				letter-spacing: rem-calc(0.5px);
+				@apply leading-px24;
+			}
 
 			@screen lg {
 			@apply text-px20 leading-px30 mt-px30;
@@ -152,11 +261,15 @@
 			color: theme('colors.teal.dark');
 
 			@screen md {
-			@apply px-8;
+			@apply px-8 mt-px32;
 			}
 
 			@screen lg {
 			@apply py-5 p-20 text-px20 leading-px26;
+			}
+
+			@screen xl {
+				@apply mt-px50;
 			}
 		}
   }
@@ -166,10 +279,10 @@
 
 	&__title {
 	  color: theme('colors.teal.dark');
-	  @apply mt-px80 mx-0 mb-px60;
+	  @apply mt-px80 mx-0 mb-px40;
 
 	  @screen md {
-		@apply mt-px60 mb-px64;
+		@apply mb-px20;
 	  }
 
 	  @screen lg {
@@ -179,9 +292,7 @@
 	}
 
 	&__container {
-	  gap: 20px 0;
-	  padding-bottom: 100px;
-	  @apply pb-px100;
+	  @apply pb-px100 space-y-px20;
 
 	  @screen md {
 		@apply pb-px80;
@@ -189,7 +300,7 @@
 	  }
 
 	  @screen lg {
-		@apply pb-px120;
+		@apply pb-px120 space-y-0;
 		justify-content: space-between;
 	  }
 
@@ -197,7 +308,7 @@
 		flex: 0 0 100%;
 
 		@screen md {
-		  flex-basis: calc(492 / 768 * 100%);
+		  flex-basis: calc(492 / 668 * 100%);
 		}
 
 		@screen lg {
